# wikipedia-rag-QA

./: .gitignore  FUTURE.md  README.md  SCORES.md  pyproject.toml  requirements-deploy.txt
app/: main.py  streamlit_app.py
eval/: add_ground_truth.py  generate_answers.py  generate_golden_set.py  golden_set.json  golden_set_2_outputs.json  golden_set_2_outputs_baseline.json  golden_set_outputs_baseline_outputs_hybrid_search.json  golden_set_outputs_baseline_outputs_reranking.json  golden_set_outputs_contextual_emb.json  run_eval.py
pipeline/: chunking.py  embeddings.py  ingestion.py  llm.py  rag.py  reranking.py  retrieval.py
scraper/: wikipedia.py
