[project]
name = "ep-005-wikipedia-rag-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
