[project]
name = "ep-005-wikipedia-rag-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "groq>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.0",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "streamlit>=1.59.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
